# prompt-butler

./: .agent-config.yaml  .envrc  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  Taskfile.yml  workflow
.beads/: .gitignore  beads.db  config.yaml  issues.jsonl  issues.jsonl.bak  sync_base.jsonl
.beads/export-state/: 44dc3ef3beddbd65.json
.claude/: COMMANDS_README.md  agents  docs  hooks  settings.json
.claude/commands/: context  dev  document-design-style.md  pm  regression-test  tm
.ralph-tui/: config.toml
.taskmaster/: config.json  state.json
.taskmaster/tasks/: tasks.json
backend/: .env.example  .gitignore  README.md  main.py  models.py  pyproject.toml  requirements.txt
backend/prompt_butler/: __init__.py  cli.py  main.py  models.py
backend/prompt_butler/routers/: __init__.py  groups.py  prompts.py  tags.py
backend/prompt_butler/services/: __init__.py  config.py  migrate.py  migration.py  storage.py
backend/prompt_butler/tui/: __init__.py  app.py
backend/routers/: prompts.py
backend/services/: storage.py
backend/tests/: conftest.py  test_cli.py  test_cli_config.py  test_cli_copy.py  test_cli_delete.py  test_cli_group.py  test_cli_index.py  test_cli_list.py  test_cli_show.py  test_cli_tag.py  test_cli_tui.py  test_config.py  test_groups_router.py  test_migrate.py  test_migration.py  test_models.py  test_prompts_router.py  test_storage.py  test_tags_router.py  test_tui.py  test_tui_detail.py  test_tui_edit.py
docs/: 2025-08 - AIMUG slides.md  STANDARD-CODING-GUIDELINES.md
docs/plans/: 2025-01-15-prompt-butler-design.md
docs/prds/: web-ui-test-cases.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/docs/prds/: 2025-08-16-DRI-171-shadcn-component-migration.md
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DeleteConfirmModal.tsx  DeletePromptDialog.tsx  EmptyState.tsx  GroupSelect.tsx  Layout.tsx  LoadingSpinner.tsx  TagAutocomplete.tsx  TagInput.test.tsx  TagInput.tsx  TagPill.tsx
frontend/src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button-variants.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  skeleton.tsx  textarea.tsx
frontend/src/hooks/: usePrompt.ts  usePrompts.ts  useTagsAndGroups.ts
frontend/src/pages/: PromptForm.tsx  PromptList.test.tsx  PromptList.tsx
frontend/src/schemas/: prompt.ts
frontend/src/services/: api.ts
frontend/src/types/: prompt.ts
frontend/src/utils/: errorHandler.ts
